Issue #14: Added build for self-contained, native Windows distribution.